--- a/app/views/buffets/show.html.erb
+++ b/app/views/buffets/show.html.erb
@@ -1,4 +1,4 @@
-<div>
+<div id="buffet<%= @buffet.id %>">
   <h1><%= @buffet.brand_name %></h1>
   <p><%= @buffet.description %></p>
   <% if buffet_profile_signed_in? %>
